css/_logged-in.scss
// main: main.scss
.user-logged-in {
  display: none;
  background: $off-white;
  .quote-banner {
    padding-bottom: 2rem;
    text-align: center;
  }
  .wrapper {
    max-width: 100%;
    margin: 0 auto;
    padding: 1rem 0 2rem;
    @include for-tablet-landscape-up {
      max-width: 70%;
      padding: 2rem 0 4rem;
    }
  }
  .tabs {
    padding: 0;
    margin: 0 0 0 1rem;
    list-style: none;
    @include for-tablet-portrait-up {
      margin-left: 2rem;
    }
    li {
      display: inline-block;
      margin: 0;
      button {
        padding: 0.66rem 1rem;
        margin: 0;
        border: 1px solid transparent;
        background: transparent;
        color: $dark-grey;
        &:hover {
          color: $secondary;
        }
        @include for-phone-only {
          font-size: 0.8rem;
        }
      }
    }
    li.active {
      button {
        border-top: 4px solid $brand;
        border-right: 1px solid $grey;
        border-bottom: 1px solid #fff;
        border-left: 1px solid $grey;
        border-top-left-radius: 5px;
        border-top-right-radius: 5px;
        background: #fff;
        color: $secondary;
      }
    }
  }
  .inner {
    border: 1px solid $grey;
    padding: 2rem 0.66rem 3rem;
    background: #fff;
    @include for-tablet-portrait-up {
      padding: 2rem 2rem 3rem;
    }
  }
  section {
    display: none;
    text-align: center;
    h2,
    h3 {
      color: $secondary;
    }
    h2 {
      font-size: 1.8rem;
      margin: 0 0 1rem;
    }
    h3 {
      font-size: 1.3rem;
      margin: 0 0 1.5rem;
    }
    hr {
      margin: 1.5rem 0;
    }
    .list-header {
      margin: 1rem 0 0;
      text-transform: uppercase;
      color: $dark-grey;
      font-size: 0.8rem;
    }
    .activity-list {
      padding: 0;
      li {
        margin: 0.66rem 0;
        @include for-tablet-portrait-up {
          margin: 1rem;
        }
      }
    }
    .mood-list {
      padding: 1rem 0;
      display: flex;
      flex-flow: wrap;
      align-items: stretch;
      justify-content: space-between;
      .mood-btn {
        flex: 0 0 48%;
        padding: 2rem 0;
        background: $brand;
        color: #fff;
        transition: 0.4s ease;
        @include for-tablet-portrait-up {
          flex-basis: 24.25%;
        }
        @include for-desktop-up {
          padding: 3rem 0;
        }
        &:hover {
          background: $dark;
        }
      }
    }
  }
  #mindfulness {
    display: block;
  }
  .finish-audio {
    display: none;
  }
  #historyList {
    li {
      margin-bottom: 1.5rem;
      p {
        margin-bottom: 0.5rem;
      }
    }
  }
}

